atualização fundo006.html

--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -8,10 +8,17 @@
 <style>
     body {
         height: 100vh;
+        
+        /*
+        Shorthand - Background
         background-color: black;
         background-image: url('imagens/wallpaper002.jpg');
         background-position: center center;
         background-repeat: no-repeat;
+        background-size: cover;
+        */
+
+        background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
         background-size: cover;
     }
 
@@ -29,6 +36,8 @@
         <h1>Teste de Imagem de Fundo</h1>
         <p>A Tecnologia Atual: Avanços, Impactos e Desafios
 
+A Tecnologia Atual: Avanços, Impactos e Desafios
+
 Vivemos em uma era marcada pela rápida evolução tecnológica, onde os avanços ocorrem em um ritmo acelerado e transformam profundamente a maneira como vivemos, trabalhamos, nos comunicamos e nos relacionamos com o mundo. A tecnologia atual não é apenas uma ferramenta, mas uma força propulsora que molda sociedades, economias e culturas em escala global.
 
 Avanços Tecnológicos Recentes
@@ -37,6 +46,29 @@ Nos últimos anos, testemunhamos um progresso impressionante em diversas áreas 
 A computação em nuvem (cloud computing) revolucionou a forma como armazenamos e acessamos dados, possibilitando o trabalho remoto, o ensino a distância e a colaboração global em tempo real. Paralelamente, o avanço da Internet das Coisas (IoT) está tornando objetos comuns — como geladeiras, relógios, carros e lâmpadas — mais inteligentes e conectados.
 
 A biotecnologia também tem dado saltos significativos, especialmente na área da saúde, com o desenvolvimento de terapias genéticas, vacinas de RNA mensageiro e avanços na medicina personalizada. A computação quântica, embora ainda em estágio inicial, promete um salto exponencial na capacidade de processamento e resolução de problemas complexos.
+
+Impactos Sociais e Econômicos
+A tecnologia atual tem impactos profundos na vida cotidiana. A automação e os algoritmos estão mudando o mercado de trabalho, eliminando empregos tradicionais ao mesmo tempo em que criam novas profissões e exigem habilidades diferentes. Esse processo de transformação requer adaptação constante, tanto por parte dos trabalhadores quanto das instituições educacionais.
+
+Na área da comunicação, as redes sociais e os aplicativos de mensagens reformularam as interações humanas, tornando a informação mais acessível, mas também abrindo espaço para desafios como a desinformação, a polarização política e os problemas de saúde mental relacionados ao uso excessivo de telas.
+
+No setor econômico, empresas que dominam tecnologias emergentes estão alcançando níveis sem precedentes de poder e influência. Gigantes da tecnologia como Google, Amazon, Apple, Microsoft e Meta têm papel central na economia global, mas também enfrentam críticas relacionadas à privacidade, monopólios e uso ético de dados.
+
+Desafios Éticos e Sustentabilidade
+Com todo o potencial transformador da tecnologia, surgem também desafios éticos importantes. Como garantir que os sistemas de IA sejam justos, transparentes e livres de preconceitos? Como proteger a privacidade dos indivíduos em um mundo cada vez mais monitorado e conectado? Qual é o limite da automação nas relações humanas?
+
+A sustentabilidade é outro ponto crucial. A produção e o descarte de dispositivos eletrônicos geram impactos ambientais significativos. A mineração de dados e a operação de grandes centros de dados consomem quantidades enormes de energia. Assim, torna-se essencial pensar em soluções tecnológicas que sejam sustentáveis e ambientalmente responsáveis.
+
+Tendências Futuras
+O futuro da tecnologia aponta para um mundo ainda mais integrado e inteligente. Espera-se que a IA generativa continue avançando, contribuindo para áreas como arte, design, programação e educação. A realidade aumentada (RA) e a realidade virtual (RV) devem se tornar mais comuns no cotidiano, especialmente com a popularização de dispositivos como óculos inteligentes e ambientes imersivos.
+
+Outra tendência é a expansão da conectividade por meio de redes 5G e, futuramente, 6G, que permitirão conexões ultrarrápidas e confiáveis, impulsionando inovações em cidades inteligentes, veículos autônomos e medicina à distância.
+
+A descentralização digital, com o uso de blockchain e tecnologias Web3, também pode transformar a forma como interagimos na internet, oferecendo mais controle aos usuários sobre seus dados e suas identidades digitais.
+
+Conclusão
+
+A tecnologia atual está moldando um novo paradigma civilizacional. Se por um lado oferece soluções extraordinárias para problemas antigos e novas possibilidades para o futuro, por outro lado exige responsabilidade, ética e uma profunda reflexão sobre os caminhos que estamos trilhando. O desafio coletivo será garantir que esse progresso tecnológico seja equitativo, sustentável e centrado no bem-estar humano.
     </main>
 </body>
 </html>
